Homepage url updated - name+repo name

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "michaelkjaco_streaming_react_app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Digital-Design-Solutions/michaelkjaco_streaming_react_app",
+  "homepage": "https://dharmaagiletech.github.io/michaelkjaco_streaming_react_app",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
