--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "michaelkjaco_streaming_react_app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dharmaagiletech.github.io/michaelkjaco_streaming_react_app",
+  "homepage": "https://michaelkjaco.com/iwc-tv",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -25,9 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -46,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.0"
   }
 }
